backend/kubernetes/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: backend-containers
          image: northamerica-northeast2-docker.pkg.dev/booming-edge-454201-b3/ecommerce-backend/ecommerce-backend:$COMMIT_SHA
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
