backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendservice
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: ecommerce
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
