backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ecommerce-backend-ip
    networking.gke.io/managed-certificates: ecommerce-backend-cert
    kubernetes.io/ingress.class: "gce"
    ingress.gcp.kubernetes.io/health-check-path: "/auth/health"
    ingress.gcp.kubernetes.io/health-check-interval: "10"
    ingress.gcp.kubernetes.io/health-check-timeout: "5"
spec:
  rules:
    - host: vrajpatelproject.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backendservice
                port:
                  number: 8080
